versioned_docs/version-2025.2.5/professor/haroldo_yutaka_misunaga.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Haroldo Yutaka Misunaga",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Empreendedorismo - 2455",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_7-2",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Gestão de Pessoas - 2433",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_3-1",
          "students": [
            "TGC2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Logística aplicada à indústria de alimentos - 2386",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_15-2",
          "students": [
            "TAL2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Gestão e Empreendedorismo Rural - 1095",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Gestão de pessoas - 2331",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "",
          "students": [
            "COM2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Métodos e técnicas de pesquisa - 2399",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "",
          "students": [
            "TGC2026"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Logística aplicada à indústria de alimentos - 2386",
          "size": 1,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_15-2",
          "students": [
            "TAL2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Empreendedorismo - 2455",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2023"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Gestão e Empreendedorismo Rural - 1095",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2023"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Empreendedorismo (PPC2020) - 2312",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_11-2",
          "students": [
            "ELE2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Plano de Negócio - 1506",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_5",
          "students": [
            "TGC2024"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Gestão de pessoas - 2331",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_7-2",
          "students": [
            "COM2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Empreendedorismo - 2401",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_3-1",
          "students": [
            "TGC2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Gestão e Empreendedorismo Rural - 2214",
          "size": 2,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGR2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Haroldo Yutaka Misunaga

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>

